# pos

./: bash.exe.stackdump
atv_biblioteca/: app.py  models.py
atv_biblioteca_requets/: main.py  pyproject.toml  require.py
atv_exebir_pedidos/: app.py  require.py
atv_exibir_pedidos/: app.py
atv_locadora/: app.py  models.py  pyproject.toml
atv_veiculos/: app.py  models.py  require.py
