[project]
name = "atv-locadora"
version = "0.1.0"
description = "Atividade prática para consolidar base e a validação de dados."
authors = [
    {name = "Ayslan Francisco Monteiro Neto",email = "ayslanfrancisco999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
